Fix spacing between containers and icons

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ body {
 
 /* Navigation - Responsive */
 
-@media only screen and (max-width: 530px) {
+@media only screen and (max-width: 600px) {
   .navMenu a {
     display: block;
     text-align: center;
@@ -106,6 +106,7 @@ body {
   background-color: #203a42;
   opacity: 0.94;
   margin-top: 30px;
+  margin-bottom: 20px;
   padding: 16px;
   border-radius: 8px;
   color: #f2f2f2;
@@ -144,7 +145,7 @@ body {
 .dev-icon {
   display: inline-block;
   text-align: center;
-  padding: 16px;
+  padding: 0 6% 0 6%;
 }
 
 .icons img {
